--- a/Assignment7/main.html
+++ b/Assignment7/main.html
@@ -32,7 +32,7 @@
     <div class="container">
         <h1>About Rust Programming Language</h1>
         <p>Rust is a systems programming language that emphasizes safety, concurrency, and performance. It is designed to be memory safe without sacrificing performance, making it suitable for a wide range of applications.</p>
-        <p>Key features of Rust include:</p>
+        <p>Key features of Rust include:</p> <p>I added this</p>
         <ul>
             <li><strong>Memory Safety:</strong> Rust's ownership system ensures memory safety without the need for a garbage collector.</li>
             <li><strong>Concurrency:</strong> Rust provides powerful tools for writing concurrent code, including threads and async/await syntax.</li>
